[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://ui/object_placer.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="requests" type="Node" parent="."]

[node name="fireLabel" type="RichTextLabel" parent="."]
margin_left = 150.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 70.0
text = "Fire: "

[node name="waterLabel" type="RichTextLabel" parent="."]
margin_left = 250.0
margin_top = 30.0
margin_right = 350.0
margin_bottom = 70.0
text = "Water:"

[node name="earthLabel" type="RichTextLabel" parent="."]
margin_left = 350.0
margin_top = 30.0
margin_right = 450.0
margin_bottom = 70.0
text = "Earth:"

[node name="airLabel" type="RichTextLabel" parent="."]
margin_left = 450.0
margin_top = 30.0
margin_right = 550.0
margin_bottom = 70.0
text = "Air:"

[node name="aetherLabel" type="RichTextLabel" parent="."]
margin_left = 550.0
margin_top = 30.0
margin_right = 650.0
margin_bottom = 70.0
text = "Aether:"

[node name="PlacementWindow" parent="." instance=ExtResource( 2 )]
